5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1863_1292.log
== TEST (2019-07-02 11:11:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
y=array(input([""]))

a=dot(inv(x),v)

print("ametista:", a)
print("esmeralda:", )
print("safira")
print()

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:11:14) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
y=array(input(""))

a=dot(inv(x),v)

print("ametista:", a)
print("esmeralda:", )
print("safira")
print()

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:11:38) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
y=array(input(""))

a=dot(inv(x),y)

print("ametista:", a)
print("esmeralda:", )
print("safira")
print()

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:13:19) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
y=array(eval(input("")))


print("ametista:", a)
print("esmeralda:", )
print("safira")
print()

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:18:44) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:18:49) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input(":")))

a=dot(inv(x), mt)

print("ametista:", a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:19:35) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input([":"])))

a=dot(inv(x), mt)

print("ametista:", a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:19:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input([])))

a=dot(inv(x), mt)

print("ametista:", a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:20:05) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(input([]))

a=dot(inv(x), mt)

print("ametista:", a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:20:13) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array([])

a=dot(inv(x), mt)

print("ametista:", a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:20:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(input([]))

a=dot(inv(x), mt)

print("ametista:", a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:20:47) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(input())

a=dot(inv(x), mt)

print("ametista:", a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:20:53) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(input())

a=dot(inv(x), mt)

print("ametista:", a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:21:07) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input()))

a=dot(inv(x), mt)

print("ametista:", a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:21:18) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=input([])

a=dot(inv(x), mt)

print("ametista:", a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:21:45) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=input([70,181,41])

a=dot(inv(x), mt)

print("ametista:", a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:22:08) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=input([[70,181,41]])

a=dot(inv(x), mt)

print("ametista:", a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:22:13) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=input([[70,181,41]])

a=dot(inv(x), mt)

print("ametista:", a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:22:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(input([70,181,41]))

a=dot(inv(x), mt)

print("ametista:", a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:22:34) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(input([[70,181,41]]))

a=dot(inv(x), mt)

print("ametista:", a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:22:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:24:10) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", a[0])
print("esmeralda", a[1])
print("safira", a[2])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:24:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", a[0])
print("esmeralda", a[1])
print(round("safira", a[2],1)
-- ERROR:
File "XXXX", line 14
    
                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:25:51) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", round(a[0],1))
print("esmeralda", round(a[1],1))
print("safira", round(a[2],1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:25:57) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", round(a[0],1))
print("esmeralda", round(a[1],1))
print("safira", round(a[2],1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:28:22) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", round(a[0],1))
print("esmeralda", round(a[1],1))
print("safira", round(a[2],1))

for i in range:
	max=max+1
print(max)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:28:48) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", round(a[0],1))
print("esmeralda", round(a[1],1))
print("safira", round(a[2],1))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:29:23) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", round(a[0],1))
print("esmeralda", round(a[1],1))
print("safira", round(a[2],1))


-- EXECUTION TIME:
1.20533
-- TEST CASE 1:
---- input:
 [10107,15720,3339]
---- correct output:
ametista: 1060.0
esmeralda: 325.0
safira: 652.0
ametista
---- user output:
ametista: 1060.0
esmeralda 325.0
safira 652.0
-- TEST CASE 2:
---- input:
[5703,23325,5301]
---- correct output:
ametista: 195.0
esmeralda: 1060.0
safira: 963.0
esmeralda
---- user output:
ametista: 195.0
esmeralda 1060.0
safira 963.0
-- TEST CASE 3:
---- input:
[4797,18873,4167]
---- correct output:
ametista: 231.0
esmeralda: 654.0
safira: 987.0
safira
---- user output:
ametista: 231.0
esmeralda 654.0
safira 987.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:29:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", round(a[0],1))
print("esmeralda", round(a[1],1))
print("safira", round(a[2],1))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:29:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", round(a[0],1))
print("esmeralda", round(a[1],1))
print("safira", round(a[2],1))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:29:32) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", round(a[0],1))
print("esmeralda", round(a[1],1))
print("safira", round(a[2],1))


-- EXECUTION TIME:
1.54537
-- TEST CASE 1:
---- input:
 [10107,15720,3339]
---- correct output:
ametista: 1060.0
esmeralda: 325.0
safira: 652.0
ametista
---- user output:
ametista: 1060.0
esmeralda 325.0
safira 652.0
-- TEST CASE 2:
---- input:
[5703,23325,5301]
---- correct output:
ametista: 195.0
esmeralda: 1060.0
safira: 963.0
esmeralda
---- user output:
ametista: 195.0
esmeralda 1060.0
safira 963.0
-- TEST CASE 3:
---- input:
[4797,18873,4167]
---- correct output:
ametista: 231.0
esmeralda: 654.0
safira: 987.0
safira
---- user output:
ametista: 231.0
esmeralda 654.0
safira 987.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:31:44) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", round(a[0],1))
print("esmeralda", round(a[1],1))
print("safira", round(a[2],1))

if  a[0]>a[1] and a[2]:
	print("ametista")
elif a[1]>a[0] and a[2]:
	print("esmeralda")
else:
	print("safira")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:31:59) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", round(a[0],1))
print("esmeralda", round(a[1],1))
print("safira", round(a[2],1))

if  a[0]>a[1] and a[2]:
	print("ametista")
elif a[1]>a[0] and a[2]:
	print("esmeralda")
else:
	print("safira")
-- EXECUTION TIME:
0.909075
-- TEST CASE 1:
---- input:
 [10107,15720,3339]
---- correct output:
ametista: 1060.0
esmeralda: 325.0
safira: 652.0
ametista
---- user output:
ametista: 1060.0
esmeralda 325.0
safira 652.0
ametista
-- TEST CASE 2:
---- input:
[5703,23325,5301]
---- correct output:
ametista: 195.0
esmeralda: 1060.0
safira: 963.0
esmeralda
---- user output:
ametista: 195.0
esmeralda 1060.0
safira 963.0
esmeralda
-- TEST CASE 3:
---- input:
[4797,18873,4167]
---- correct output:
ametista: 231.0
esmeralda: 654.0
safira: 987.0
safira
---- user output:
ametista: 231.0
esmeralda 654.0
safira 987.0
esmeralda
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:32:07) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", round(a[0],1))
print("esmeralda", round(a[1],1))
print("safira", round(a[2],1))

if  a[0]>a[1] and a[2]:
	print("ametista")
elif a[1]>a[0] and a[2]:
	print("esmeralda")
else:
	print("safira")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:33:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", round(a[0],1))
print("esmeralda", round(a[1],1))
print("safira", round(a[2],1))

if  a[0]>a[1] and a[2]:
	print("ametista")
elif a[1]>a[0] and a[2]:
	print("esmeralda")
elif a[2]>a[1] and a[0]:
	print("safira")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:33:27) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", round(a[0],1))
print("esmeralda", round(a[1],1))
print("safira", round(a[2],1))

if  a[0]>a[1] and a[2]:
	print("ametista")
elif a[1]>a[0] and a[2]:
	print("esmeralda")
elif a[2]>a[1] and a[0]:
	print("safira")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:33:40) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", round(a[0],0))
print("esmeralda", round(a[1],1))
print("safira", round(a[2],1))

if  a[0]>a[1] and a[2]:
	print("ametista")
elif a[1]>a[0] and a[2]:
	print("esmeralda")
elif a[2]>a[1] and a[0]:
	print("safira")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:33:59) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", round(a[0],0))
print("esmeralda", round(a[1],0))
print("safira", round(a[2],0))

if  a[0]>a[1] and a[2]:
	print("ametista")
elif a[1]>a[0] and a[2]:
	print("esmeralda")
elif a[2]>a[1] and a[0]:
	print("safira")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:34:19) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", round(a[0],0))
print("esmeralda", round(a[1],0))
print("safira", round(a[2],0))

if  a[0]>a[1] and a[2]:
	print("ametista")
elif a[1]>a[0] and a[2]:
	print("esmeralda")
elif a[2]>a[1] and a[0]:
	print("safira")
-- EXECUTION TIME:
1.12935
-- TEST CASE 1:
---- input:
 [10107,15720,3339]
---- correct output:
ametista: 1060.0
esmeralda: 325.0
safira: 652.0
ametista
---- user output:
ametista: 1060.0
esmeralda 325.0
safira 652.0
ametista
-- TEST CASE 2:
---- input:
[5703,23325,5301]
---- correct output:
ametista: 195.0
esmeralda: 1060.0
safira: 963.0
esmeralda
---- user output:
ametista: 195.0
esmeralda 1060.0
safira 963.0
esmeralda
-- TEST CASE 3:
---- input:
[4797,18873,4167]
---- correct output:
ametista: 231.0
esmeralda: 654.0
safira: 987.0
safira
---- user output:
ametista: 231.0
esmeralda 654.0
safira 987.0
esmeralda
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:34:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", round(a[0],0))
print("esmeralda", round(a[1],0))
print("safira", round(a[2],0))

if  a[0]>a[1] and a[2]:
	print("ametista")
elif a[1]>a[0] and a[2]:
	print("esmeralda")
elif a[2]>a[1] and a[0]:
	print("safira")
-- EXECUTION TIME:
0.856331
-- TEST CASE 1:
---- input:
 [10107,15720,3339]
---- correct output:
ametista: 1060.0
esmeralda: 325.0
safira: 652.0
ametista
---- user output:
ametista: 1060.0
esmeralda 325.0
safira 652.0
ametista
-- TEST CASE 2:
---- input:
[5703,23325,5301]
---- correct output:
ametista: 195.0
esmeralda: 1060.0
safira: 963.0
esmeralda
---- user output:
ametista: 195.0
esmeralda 1060.0
safira 963.0
esmeralda
-- TEST CASE 3:
---- input:
[4797,18873,4167]
---- correct output:
ametista: 231.0
esmeralda: 654.0
safira: 987.0
safira
---- user output:
ametista: 231.0
esmeralda 654.0
safira 987.0
esmeralda
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:34:26) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", round(a[0],0))
print("esmeralda", round(a[1],0))
print("safira", round(a[2],0))

if  a[0]>a[1] and a[2]:
	print("ametista")
elif a[1]>a[0] and a[2]:
	print("esmeralda")
elif a[2]>a[1] and a[0]:
	print("safira")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:34:52) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", round(a[0],0))
print("esmeralda", round(a[1],0))
print("safira", round(a[2],0))

if  a[0]>a[1] else a[2]:
	print("ametista")
elif a[1]>a[0] else a[2]:
	print("esmeralda")
elif a[2]>a[1] else a[0]:
	print("safira")
-- ERROR:
File "XXXX", line 15
    if  a[0]>a[1] else a[2]:
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:36:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", round(a[0],0))
print("esmeralda", round(a[1],0))
print("safira", round(a[2],0))

if  a[0]>a[1] 
	if a[0]>a[2]:
		print("ametista")
elif a[1]>a[0] 
	if a[1]>a[2]:
		print("esmeralda")
elif a[2]>a[1] 
	if a[2]>a[0]:
		print("safira")
-- ERROR:
File "XXXX", line 15
    if  a[0]>a[1] 
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:36:42) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", round(a[0],0))
print("esmeralda", round(a[1],0))
print("safira", round(a[2],0))

if  a[0]>a[1] :
	if a[0]>a[2]:
		print("ametista")
elif a[1]>a[0]: 
	if a[1]>a[2]:
		print("esmeralda")
elif a[2]>a[1]:
	if a[2]>a[0]:
		print("safira")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:36:52) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", round(a[0],0))
print("esmeralda", round(a[1],0))
print("safira", round(a[2],0))

if  a[0]>a[1] :
	if a[0]>a[2]:
		print("ametista")
elif a[1]>a[0]: 
	if a[1]>a[2]:
		print("esmeralda")
elif a[2]>a[1]:
	if a[2]>a[0]:
		print("safira")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:37:10) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", round(a[0],0))
print("esmeralda", round(a[1],0))
print("safira", round(a[2],0))

if  a[0]>a[1] :
	if a[0]>a[2]:
		print("ametista")
elif a[1]>a[0]: 
	if a[1]>a[2]:
		print("esmeralda")
elif a[2]>a[1]:
	if a[2]>a[0]:
		print("safira")
-- EXECUTION TIME:
1.15398
-- TEST CASE 1:
---- input:
 [10107,15720,3339]
---- correct output:
ametista: 1060.0
esmeralda: 325.0
safira: 652.0
ametista
---- user output:
ametista: 1060.0
esmeralda 325.0
safira 652.0
ametista
-- TEST CASE 2:
---- input:
[5703,23325,5301]
---- correct output:
ametista: 195.0
esmeralda: 1060.0
safira: 963.0
esmeralda
---- user output:
ametista: 195.0
esmeralda 1060.0
safira 963.0
esmeralda
-- TEST CASE 3:
---- input:
[4797,18873,4167]
---- correct output:
ametista: 231.0
esmeralda: 654.0
safira: 987.0
safira
---- user output:
ametista: 231.0
esmeralda 654.0
safira 987.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:37:13) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", round(a[0],0))
print("esmeralda", round(a[1],0))
print("safira", round(a[2],0))

if  a[0]>a[1] :
	if a[0]>a[2]:
		print("ametista")
elif a[1]>a[0]: 
	if a[1]>a[2]:
		print("esmeralda")
elif a[2]>a[1]:
	if a[2]>a[0]:
		print("safira")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:37:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", round(a[0],0))
print("esmeralda", round(a[1],0))
print("safira", round(a[2],0))

if  a[0]>a[1] :
	if a[0]>a[2]:
		print("ametista")
elif a[1]>a[0]: 
	if a[1]>a[2]:
		print("esmeralda")
elif a[2]>a[1]:
	if a[2]>a[0]:
		print("safira")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:37:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", round(a[0],0))
print("esmeralda", round(a[1],0))
print("safira", round(a[2],0))

if  a[0]>a[1] :
	if a[0]>a[2]:
		print("ametista")
elif a[1]>a[0]: 
	if a[1]>a[2]:
		print("esmeralda")
elif a[2]>a[1]:
	if a[2]>a[0]:
		print("safira")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:38:49) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", round(a[0],0))
print("esmeralda", round(a[1],0))
print("safira", round(a[2],0))

if  a[0]>a[1] :
	if a[0]>a[2]:
		print("ametista")
elif a[1]>a[0]: 
	if a[1]>a[2]:
		print("esmeralda")
elif a[2]>a[1] and a[2]>a[0]:
		print("safira")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:39:05) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", round(a[0],0))
print("esmeralda", round(a[1],0))
print("safira", round(a[2],0))

if  a[0]>a[1] :
	if a[0]>a[2]:
		print("ametista")
elif a[1]>a[0]: 
	if a[1]>a[2]:
		print("esmeralda")
elif a[2]>a[1] and a[2]>a[0]:
		print("safira")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:39:05) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", round(a[0],0))
print("esmeralda", round(a[1],0))
print("safira", round(a[2],0))

if  a[0]>a[1] :
	if a[0]>a[2]:
		print("ametista")
elif a[1]>a[0]: 
	if a[1]>a[2]:
		print("esmeralda")
elif a[2]>a[1] and a[2]>a[0]:
		print("safira")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:39:09) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", round(a[0],0))
print("esmeralda", round(a[1],0))
print("safira", round(a[2],0))

if  a[0]>a[1] :
	if a[0]>a[2]:
		print("ametista")
elif a[1]>a[0]: 
	if a[1]>a[2]:
		print("esmeralda")
elif a[2]>a[1] and a[2]>a[0]:
		print("safira")
-- EXECUTION TIME:
1.11375
-- TEST CASE 1:
---- input:
 [10107,15720,3339]
---- correct output:
ametista: 1060.0
esmeralda: 325.0
safira: 652.0
ametista
---- user output:
ametista: 1060.0
esmeralda 325.0
safira 652.0
ametista
-- TEST CASE 2:
---- input:
[5703,23325,5301]
---- correct output:
ametista: 195.0
esmeralda: 1060.0
safira: 963.0
esmeralda
---- user output:
ametista: 195.0
esmeralda 1060.0
safira 963.0
esmeralda
-- TEST CASE 3:
---- input:
[4797,18873,4167]
---- correct output:
ametista: 231.0
esmeralda: 654.0
safira: 987.0
safira
---- user output:
ametista: 1060.0
esmeralda 325.0
safira 652.0
ametista
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:39:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", round(a[0],0))
print("esmeralda", round(a[1],0))
print("safira", round(a[2],0))

if  a[0]>a[1] :
	if a[0]>a[2]:
		print("ametista")
elif a[1]>a[0]: 
	if a[1]>a[2]:
		print("esmeralda")
elif a[2]>a[1] and a[2]>a[0]:
		print("safira")
-- EXECUTION TIME:
1.77745
-- TEST CASE 1:
---- input:
 [10107,15720,3339]
---- correct output:
ametista: 1060.0
esmeralda: 325.0
safira: 652.0
ametista
---- user output:
ametista: 1060.0
esmeralda 325.0
safira 652.0
ametista
-- TEST CASE 2:
---- input:
[5703,23325,5301]
---- correct output:
ametista: 195.0
esmeralda: 1060.0
safira: 963.0
esmeralda
---- user output:
ametista: 195.0
esmeralda 1060.0
safira 963.0
esmeralda
-- TEST CASE 3:
---- input:
[4797,18873,4167]
---- correct output:
ametista: 231.0
esmeralda: 654.0
safira: 987.0
safira
---- user output:
ametista: 231.0
esmeralda 654.0
safira 987.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:39:18) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", round(a[0],0))
print("esmeralda", round(a[1],0))
print("safira", round(a[2],0))

if  a[0]>a[1] :
	if a[0]>a[2]:
		print("ametista")
elif a[1]>a[0]: 
	if a[1]>a[2]:
		print("esmeralda")
elif a[2]>a[1] and a[2]>a[0]:
		print("safira")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:40:07) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", round(a[0],0))
print("esmeralda", round(a[1],0))
print("safira", round(a[2],0))

if  a[0]>a[1] and a[0]>a[2]:
		print("ametista")
elif a[1]>a[0] and a[1]>a[2]:
		print("esmeralda")
else:
	print("safira")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:40:19) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", round(a[0],0))
print("esmeralda", round(a[1],0))
print("safira", round(a[2],0))

if  a[0]>a[1] and a[0]>a[2]:
		print("ametista")
elif a[1]>a[0] and a[1]>a[2]:
		print("esmeralda")
else:
	print("safira")
-- EXECUTION TIME:
1.11945
-- TEST CASE 1:
---- input:
 [10107,15720,3339]
---- correct output:
ametista: 1060.0
esmeralda: 325.0
safira: 652.0
ametista
---- user output:
ametista: 1060.0
esmeralda 325.0
safira 652.0
ametista
-- TEST CASE 2:
---- input:
[5703,23325,5301]
---- correct output:
ametista: 195.0
esmeralda: 1060.0
safira: 963.0
esmeralda
---- user output:
ametista: 195.0
esmeralda 1060.0
safira 963.0
esmeralda
-- TEST CASE 3:
---- input:
[4797,18873,4167]
---- correct output:
ametista: 231.0
esmeralda: 654.0
safira: 987.0
safira
---- user output:
ametista: 231.0
esmeralda 654.0
safira 987.0
safira
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:40:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", round(a[0],0))
print("esmeralda", round(a[1],0))
print("safira", round(a[2],0))

if  a[0]>a[1] and a[0]>a[2]:
		print("ametista")
elif a[1]>a[0] and a[1]>a[2]:
		print("esmeralda")
else:
	print("safira")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:40:46) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", round(a[0],0))
print("esmeralda", round(a[1],0))
print("safira", round(a[2],0))

if  a[0]>a[1] and a[0]>a[2]:
		print("ametista")
elif a[1]>a[0] and a[1]>a[2]:
		print("esmeralda")
else:
	print("safira")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:40:54) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", round(a[0],0))
print("esmeralda", round(a[1],0))
print("safira", round(a[2],0))

if  a[0]>a[1] and a[0]>a[2]:
		print("ametista")
elif a[1]>a[0] and a[1]>a[2]:
		print("esmeralda")
else:
	print("safira")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:41:06) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", round(a[0],0))
print("esmeralda", round(a[1],0))
print("safira", round(a[2],0))

if  a[0]>a[1] and a[0]>a[2]:
		print("ametista")
elif a[1]>a[0] and a[1]>a[2]:
		print("esmeralda")
else:
	print("safira")
-- EXECUTION TIME:
1.19229
-- TEST CASE 1:
---- input:
 [10107,15720,3339]
---- correct output:
ametista: 1060.0
esmeralda: 325.0
safira: 652.0
ametista
---- user output:
ametista: 1060.0
esmeralda 325.0
safira 652.0
ametista
-- TEST CASE 2:
---- input:
[5703,23325,5301]
---- correct output:
ametista: 195.0
esmeralda: 1060.0
safira: 963.0
esmeralda
---- user output:
ametista: 195.0
esmeralda 1060.0
safira 963.0
esmeralda
-- TEST CASE 3:
---- input:
[4797,18873,4167]
---- correct output:
ametista: 231.0
esmeralda: 654.0
safira: 987.0
safira
---- user output:
ametista: 231.0
esmeralda 654.0
safira 987.0
safira
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:41:14) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array([[8,3,1],
			[5,12,10],
			[1,3,2]])
mt=array(eval(input("")))

a=dot(inv(x), mt)

print("ametista:", round(a[0],0))
print("esmeralda:", round(a[1],0))
print("safira:", round(a[2],0))

if  a[0]>a[1] and a[0]>a[2]:
		print("ametista")
elif a[1]>a[0] and a[1]>a[2]:
		print("esmeralda")
else:
	print("safira")
-- EXECUTION TIME:
1.22561
-- TEST CASE 1:
---- input:
 [10107,15720,3339]
---- correct output:
ametista: 1060.0
esmeralda: 325.0
safira: 652.0
ametista
---- user output:
ametista: 1060.0
esmeralda: 325.0
safira: 652.0
ametista
-- TEST CASE 2:
---- input:
[5703,23325,5301]
---- correct output:
ametista: 195.0
esmeralda: 1060.0
safira: 963.0
esmeralda
---- user output:
ametista: 195.0
esmeralda: 1060.0
safira: 963.0
esmeralda
-- TEST CASE 3:
---- input:
[4797,18873,4167]
---- correct output:
ametista: 231.0
esmeralda: 654.0
safira: 987.0
safira
---- user output:
ametista: 231.0
esmeralda: 654.0
safira: 987.0
safira
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
